# HITAlgorithm

./: CMakeLists.txt  main.cpp
astar/: AStart.cpp  AStart.h  DataUtil.cpp  DataUtil.h  Maze.cpp  Maze.h
astar/data/: maze0.txt  maze1.txt  maze2.txt
convexhull/: BaseStruct.h  ConvexHull.cpp  ConvexHull.h
convexhull/algorithm/: BruteForce.cpp  BruteForce.h  DivideConquer.cpp  DivideConquer.h  GrahamScan.cpp  GrahamScan.h
convexhull/data/: point.txt
convexhull/utils/: FileUtil.h  PlotUtil.h  RandomUtil.h  TimeUtil.h
quick-sort/: QuickSort.cpp  QuickSort.h
set-cover/: SetCover.cpp  SetCover.h
set-cover/glpk/lib/: glpk_4_65.lib
